fittings/crates/macros/tests/ui/fail/associated_const.stderr
error: service traits cannot declare associated consts
 --> tests/ui/fail/associated_const.rs:3:5
  |
3 |     const VERSION: &'static str;
  |     ^^^^^
